--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,6 @@
 ---
-rails.png: rails.png
-application.js: application.js
-application.css: application.css
-glyphicons-halflings-white.png: glyphicons-halflings-white.png
-glyphicons-halflings.png: glyphicons-halflings.png
+rails.png: rails-782b548cc1ba7f898cdad2d9eb8420d2.png
+application.js: application-36a8a18309d928dfd6e3fe492c561874.js
+application.css: application-c569ff05c2b1361c7eca32e8e08ba5d2.css
+glyphicons-halflings-white.png: glyphicons-halflings-white-4fbb6a0b9b4e61912f486ac494a858f1.png
+glyphicons-halflings.png: glyphicons-halflings-2ed0cba6eca0f44737ab78f1e58bc11e.png
