--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,7 +1,7 @@
 ---
 adventure_guide.png: adventure_guide-402f151db51231c6ce9615e8ee0e3ed9.png
 adventure_guide2.png: adventure_guide2-c35e7756063721b364dc0e90a232538a.png
-available.png: available-a10412547ddf3acbbfbdd1b2745d3406.png
+available.png: available-04974b5fa5df43a0d04c72036734fdd3.png
 chauffeur.png: chauffeur-cedc849441f05843a886632a123cf6d5.png
 chauffeur2.png: chauffeur2-7d1607cf6a3b971047c36fa50780b89d.png
 collage.png: collage-3742c4e346f8d91dff8391f58bcffb28.png
@@ -20,17 +20,18 @@ london.png: london-b0a6cdaa5aa66e4d44e58eab1141f5ef.png
 meal_campanion.png: meal_campanion-320883f3ff2e803f193b3eb2719f2fc4.png
 meal_companion.png: meal_companion-d52e565ac3057a5e9628827c094dbc37.png
 meal_companion2.png: meal_companion2-e3f8793eaac056e92498ab211b9380d2.png
-meetup.png: meetup-948504004dfae93ffac1c52af00e89fb.png
+meetup.png: meetup-66d3c4afd8076900ca74616a6d9df79e.png
 newyork.png: newyork-bbff86c6fe59ac36a43bead0b0779e2d.png
 nightlife_expert.png: nightlife_expert-78097108cb2b723c8f146300898fc759.png
 nightlife_expert2.png: nightlife_expert2-5cbdea4a3238f7b790bddd9f1e551c06.png
 paris.png: paris-888d5f61f9547f7163d6085d0788b900.png
 recommended.png: recommended-f6de16b5ac2f51756d354e321b3dab60.png
+request.png: request-afd4c30f464a84a5c477c2185ba817e7.png
 response.png: response-d2164ff3b10171ec0ce8fce23f6a33c4.png
 review.png: review-097c90345d670e3c0192e2b5be7e656b.png
 sanfran.png: sanfran-595a4b5732b56794b0ccf96ced5e0bbc.png
 sanfran_hover.png: sanfran_hover-e3d77e959b257a58f934717b42a91555.png
-search.png: search-c3ec5782646f7c1d73e6de9ee46cd828.png
+search.png: search-6977b81423299ea501127ef40b443fc6.png
 seattle.png: seattle-5cabd206ac9be9710b97da26f24a6739.png
 shopping_buddy.png: shopping_buddy-df63006c7c49e8d96e7747f6c8ef2151.png
 shopping_buddy2.png: shopping_buddy2-f41d8df65fc62b4ebf2a7f977580aa3e.png
@@ -45,7 +46,7 @@ twitter2.png: twitter2-449d53e24ba910024fa04c00209b5159.png
 unrecommend.png: unrecommend-073cfd6c3b76d25eb3cb3188027fa40d.png
 vancouver.png: vancouver-74c1364463d3ef81cd78805182afa9e5.png
 application.js: application-b7c6a986e1136fc96602b039b8385db8.js
-application.css: application-d77d2a9b423c91b78b91554fff47451b.css
+application.css: application-198de00df7f47f3ab98f1407d3cb8e36.css
 jquery-ui/ui-bg_flat_0_aaaaaa_40x100.png: jquery-ui/ui-bg_flat_0_aaaaaa_40x100-a1eb3e0764573ed4b261ca742ed96ac3.png
 jquery-ui/ui-bg_flat_75_ffffff_40x100.png: jquery-ui/ui-bg_flat_75_ffffff_40x100-841636c8f8d33987bb8d2f31e8ef92ca.png
 jquery-ui/ui-bg_glass_55_fbf9ee_1x400.png: jquery-ui/ui-bg_glass_55_fbf9ee_1x400-bbb04adbe79f471d8c88a2bc691231b6.png
