changed facebook twitter icons

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -8,7 +8,8 @@ collage.png: collage-3742c4e346f8d91dff8391f58bcffb28.png
 collage2.png: collage2-b582a34e2e86a236cbfee70e0a286f19.png
 collage_host.png: collage_host-6c77c638eb2921048abf035d9e311aa8.png
 completed.png: completed-999409cdcd7d32af3077b6c57cb06636.png
-facebook.png: facebook-44c3a00c2afa3e2e06294dd798bc38a9.png
+facebook.png: facebook-3d64d739364933bacc7e98897efeb7da.png
+facebook2.png: facebook2-77afc604431dcbfecbcd0539d63e710b.png
 full_hat.png: full_hat-01cbc771efdfcae9af8ce15c1f934b06.png
 hat-favicon.ico: hat-favicon-719e2364eddaa639d7ef1efce7177628.ico
 hat.png: hat-d2ff5982bd1519420a290b189209d05a.png
@@ -41,12 +42,12 @@ tinihost.png: tinihost-ccaf9b98b950da54c1b4caa915561f51.png
 toronto.png: toronto-0652ec1514d7020f6c528931b5e0d196.png
 translator.png: translator-ad1c743c695edeb26cfbe16c8306a40c.png
 translator2.png: translator2-164bedd9d387302b4a599f0fd8bf61e7.png
-twitter.png: twitter-75a18979e49d0feef1dd81b73bafc71f.png
+twitter.png: twitter-237cea211a4b74cceb49b86f28e1ac51.png
 twitter2.png: twitter2-449d53e24ba910024fa04c00209b5159.png
 unrecommend.png: unrecommend-073cfd6c3b76d25eb3cb3188027fa40d.png
 vancouver.png: vancouver-74c1364463d3ef81cd78805182afa9e5.png
 application.js: application-1a48b108bf7937ca4ec72fa879ebdf65.js
-application.css: application-7b92f714a87876b01e0778e6698455c4.css
+application.css: application-1510df0c94ea90e244d6975c29d8a1c7.css
 jquery-ui/ui-bg_flat_0_aaaaaa_40x100.png: jquery-ui/ui-bg_flat_0_aaaaaa_40x100-a1eb3e0764573ed4b261ca742ed96ac3.png
 jquery-ui/ui-bg_flat_75_ffffff_40x100.png: jquery-ui/ui-bg_flat_75_ffffff_40x100-841636c8f8d33987bb8d2f31e8ef92ca.png
 jquery-ui/ui-bg_glass_55_fbf9ee_1x400.png: jquery-ui/ui-bg_glass_55_fbf9ee_1x400-bbb04adbe79f471d8c88a2bc691231b6.png
